--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Remy Sharp <remy@leftlogic.com>",
   "dependencies": {
     "next": "latest",
+    "node-fetch": "^2.6.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
